--- a/src/Home/Home.scss
+++ b/src/Home/Home.scss
@@ -33,3 +33,22 @@ flex-wrap: wrap;
             }
           }
        }
+
+       .userDetail {
+          &-container{
+             &-inner{
+                padding:20px;
+                margin:10px;
+                gap:3rem;
+                box-shadow: 10px 10px 10px rgba(0,0,0,0.25);
+             }
+            
+            }
+        } 
+                
+
+
+          
+
+
+       
